--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
+.container {
+  background-color:bisque;
+  padding: 35px;
+  border: 3px solid black;
+}
 body{
-  background-color: bisque;
+  background-color: brown;
   font-size: 20px;
 }
 .jumbotron{
@@ -17,7 +22,10 @@ h3 {
   font-size: 34px;
 }
 button {
-  margin-top: 20px;
+  color: white;
+  font-family: sans-serif;
+  background-color: darkred;
+  padding: 5px;
 }
 img {
   width:200px;
@@ -25,6 +33,40 @@ img {
 #yourorder, #address, #thanks {
   display: none;
 }
-#ordername {
+.toppings label.checkbox{
+  margin-left: 20px;
+}
+#disclaimer {
+  margin: 0 auto;
+  text-align: center;
+  font-weight: bold;
+  font-family: cursive;
+  font-size: 22px;
+  border: 2px solid black;
+  padding: 10px;
+  width: 50%;
+  background-color: white;
+}
+#thanks{
+  font-weight: bold;
+  font-family: cursive;
+  font-size: 22px;
+  margin-top: 10px;
+}
+#pizzacol{
+  padding-left: 25px;
+}
+#confirmaddress{
+  margin-top: 10px;
+}
+#pickupconfirm{
   margin-top: 20px;
+}
+#yourorder{
+  text-align: center;
+  background-color: white;
+  border: 2px solid black;
+  padding: 25px;
+  margin-top: 15px;
+  height: 480px;
 }
